# sandbox.py

./: README.md
activex/: readme.md
activex/client/: word.py  xls.py
activex/client/api/: 00020813-0000-0000-C000-000000000046x0x1x9.py  00020905-0000-0000-C000-000000000046x0x8x7.py
activex/server/: me.ps1  me.py  me.vbs
ai/: pyproject.toml  readme.md  requirements.txt
ai/data/: contexts.yml  мастер_и_маргарита.txt
ai/n8n/: compose.yaml
ai/src/: 2m.py  chroma-giga.py  chroma.py  emb.py  fastembd.py  giga0.py  giga4chroma.py  lmStudio.py  m&m-giga.py  m&m-q&a-giga.py  m&m.py  qa3x2-1.py  qa3x2.py  store-contexts.py
ai/tg-demo/: readme.md
selenium/: readme.md
selenium/sip/: main.py  patchAD.ps1  pyproject.toml  readme.md  upgrade.py
selenium/sip/data/: .gitignore  dids.csv  dids.sinara.csv  extensions.csv  extensions.sinara.csv  omz2sinara.csv
selenium/src/: 0.py  yealink.py
selenium/src/10/: 10.1.10.py  10.1.11.py  10.1.12.py  10.1.13.py  10.1.14.py  10.1.6.py  10.1.7.py  10.1.8.py  10.1.9.py
selenium/src/4/: 4.3.5.py  4.3.7.py  4.3.9.py  4.4.14.py  4.4.3.py  4.4.6.py  4.5.1.py  4.5.2.py  4.5.3.py  4.5.4.py  4.5.5.py  4.5.6.py  4.5.7.py  4.5.8.py
selenium/src/5/: 5.3.3.py
selenium/src/6/: 6.1.3.py  6.1.5.py  6.3.4.py  6.3.5.py  6.3.6.py  6.4.4.py  6.5.2.py  6.6.1.py  6.6.10.py  6.6.11.py  6.6.12.py  6.6.2.py  6.6.3.py  6.6.4.py  6.6.5.py  6.6.7.py  (+2 more)
selenium/video/: camera.py  socks5.py  socks5ff.py
tg/: readme.md
tg/src/: first.py  send.py
webserver/: readme.md
z23/: requirements.txt
z23/korstat/: korstat.py  readme.md  readme.txt
(+63 files in other folders)
